[gd_scene load_steps=7 format=2]

[ext_resource path="res://DuelManager.gd" type="Script" id=1]
[ext_resource path="res://Systems/DialogManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/Gui/timer.png" type="Texture" id=3]
[ext_resource path="res://Art/Gui/timerbar.png" type="Texture" id=4]
[ext_resource path="res://Art/Gui/timerBack.png" type="Texture" id=5]
[ext_resource path="res://Systems/SwordManager.tscn" type="PackedScene" id=6]

[node name="DuelManager" type="Node2D"]
script = ExtResource( 1 )

[node name="DialogManager" parent="." instance=ExtResource( 2 )]

[node name="Countdown" type="TextureProgress" parent="."]
margin_left = 52.0
margin_top = 34.0
margin_right = 461.0
margin_bottom = 74.0
max_value = 10.0
step = 0.0
value = 10.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
texture_progress_offset = Vector2( 3, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EveryTenSeconds" type="Timer" parent="."]
wait_time = 10.0

[node name="SwordManager" parent="." instance=ExtResource( 6 )]

[connection signal="timeout" from="EveryTenSeconds" to="." method="_on_EveryTenSeconds_timeout"]
[connection signal="fightWon" from="SwordManager" to="." method="_on_SwordManager_fightWon"]
